package ca.dheri.aqhi.service;

import ca.dheri.aqhi.model.Location;

import java.util.List;

public class ReportService {
    public String  generateReport(List<Location> locationList) {
        throw new java.lang.UnsupportedOperationException("Not supported yet.");
    }

}
